# Enterprise-OS-intelligence

./: .gitignore  AI_Extensions_Register.csv  AI_Protocols_Register.csv  Architectural_Laws_Register.csv  ECOSYSTEM.md  Frontend_Frontier_100_Register.csv  Multimodal_Families_Register.csv  Phantom_Blockchain_Model_Register.csv  README.md  RELEASES.md  RSHIP-CHARTER.md  RSHIP-FRAMEWORK.md  SDK_Model_Manifest.json  SESSION-SUMMARY-3-PORTFOLIO-EXPANSION.md  SESSION-SUMMARY.md  WHAT-TO-KEEP-PRIVATE.md  nova.json  rship-framework.js  wrangler.jsonc
canister/: agi_terminal.mo  ai_division.mo  organism_solver.mo  organism_vault.mo  syn_engine.mo
canisters/: README.md  dfx.json
charters/: AGENT-COUNCIL-CHARTER.md  BRONZE-CANISTER-CHARTER.md  CANISTER-CHARTER.md  EFFECTTRACE-CHARTER.md  ENGINE-CHARTER.md  INDEX.md  MASTER-CHARTER.md  MEMORY-FIELD-CHARTER.md  MERIDIAN-CHARTER.md  OPERATOR-CHARTER.md  ORO-CHARTER.md  RSHIP-AGI-SYSTEMS-SUBCHARTER.md  RSHIP-COMPANY-DIVISIONS-FORMATION.md  SILVER-CANISTER-CHARTER.md  SKYHI-AVIATION-DIVISION-CHARTER.md
cloudflare-workers/: README.md  package.json
cpl/: AI_DIVISION_CHARTER.md  CLI_CHARTER.md  CPL_CHARTER.md  CPX_CHARTER.md  GOVERNANCE_CHARTER.md  ICP_PROPOSAL.md  ICX_CHARTER.md  ORG_CHARTER.md  PHX_ENCRYPTION_STRENGTH.md  PHX_FORMAL_SPEC.md  PROMETHEUS_CHARTER.md  SOVEREIGN_CYCLE_CHARTER.md  SYN_CHARTER.md  THINKING_RATE_MARKETING.md  THINKING_RATE_PAPER.md  ai_division.py  blockbox.py  cpl_bridge.py  cpl_cli.py  cpl_encoder.py  cpl_governance.py  cpl_lexer.py  cpl_registry.py  cpl_tokens.py  cpl_vm.py  cpx_renderer.py  medina_cli.mo  mls_stream.py  phx_primitive.py  sovereign_cycle.py  test_cpl.py
docs/: CPL_RESEARCH_PAPER.md
extensions/: index.js
frameworks/: EFFECTTRACE-FRAMEWORK.md  ORGANISM-FRAMEWORK.md
medina-sovereign-intelligence/: Organism.toml  alpha_engines_mod.js  arch_engines_mod.js  hart_mod.js  math_database_mod.js  medina_heartbeat_mod.js  oraculum_primus_mod.js  protocum_mod.js
native/: CMakeLists.txt
native/organism-crypto/: crypto_test  crypto_test.cpp  organism_crypto.hpp
native/organism-kernel/: ai_division.hpp  organism_kernel.hpp  organism_kernel_demo.cpp
native/phi-math/: phi_math.hpp
papers/: XX-STIGMERGY.md  (+30 more)
rust/organism-core/: Cargo.toml
rust/organism-core/src/: ai_division.rs  crypto.rs  lib.rs  main.rs  phi_math.rs  sovereign_cycle.rs  wire.rs
(+499 files in other folders)
